[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/EnemyFSM.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 36, 35.5 )

[sub_resource type="RectangleShape2D" id=44]
extents = Vector2( 26.5, 21.25 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -26 )
shape = SubResource( 42 )

[node name="Label" type="Label" parent="."]
margin_left = -46.0
margin_top = -52.0
margin_right = 54.0
margin_bottom = -38.0
text = "enemy position"

[node name="get_attack_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="get_attack_area"]
position = Vector2( 1, -26.5 )
shape = SubResource( 43 )

[node name="AttackDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( 71, -16 )
shape = SubResource( 44 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )

[connection signal="area_entered" from="get_attack_area" to="." method="_on_get_attack_area_area_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
